feat: support attach to acp
